--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap");
 
 :root {
 	--computing: #074687;
 	--shadow: #2a5a6f;
+	font-size: 16px;
 }
 
 * {
@@ -35,10 +36,10 @@
 #hero h1 {
 	font-weight: 900;
 	color: white;
-	font-size: 8em;
+	font-size: 7em;
 	padding: 0;
 	margin: 0;
-	text-shadow: var(--shadow) -7px 0;
+	text-shadow: var(--shadow) -0.07em 0;
 	display: inline-block;
 }
 
@@ -52,7 +53,7 @@
 
 @keyframes pulse-left {
 	to {
-		transform: translate(50px, 0);
+		transform: translate(60%, 0);
 	}
 }
 
@@ -66,7 +67,7 @@
 
 @keyframes pulse-right {
 	to {
-		transform: translate(-50px, 0);
+		transform: translate(-60%, 0);
 	}
 }
 
@@ -74,24 +75,21 @@ h1#event-title {
 	margin: 0 0.5em;
 }
 
-.scenario {
+#scenario {
 }
 
-
-
-.criteria {
+#criteria {
 }
 
-.bonus {
+#bonus {
 }
-
 
 nav {
 	position: sticky;
 	font-size: 1.3em;
-    border-bottom: var(--shadow) 5px solid;
-    top:0;
-    background-color: white;
+	border-bottom: var(--shadow) 5px solid;
+	top: 0;
+	background-color: white;
 }
 
 nav ul {
@@ -103,18 +101,69 @@ nav ul {
 }
 
 nav ul a {
-    color: var(--computing);
-    font-weight: 700;
+	color: var(--computing);
+	font-weight: 700;
 }
 
 a {
 	text-decoration: none;
 }
 
-main > section{
-padding: 3em;
+main > section {
+	padding: 3em;
+	min-height: 100vh;
+	width: 80%;
+	color: white;
 }
 
-main > section:nth-child(2n+1){
-    background-color:#73D9EA;
+main > section h1 {
+	font-size: 4em;
+	margin-bottom: 0.7em;
+}
+
+main {
+	background-image: url("../assets/section_background.svg");
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: 125%;
+	padding: 10% 0;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+
+/* phones */
+@media only screen and (max-width: 425px) {
+	:root {
+		font-size: 12px;
+	}
+
+	#hero h1 {
+		font-size: 3em;
+	}
+
+	main {
+		background-size: cover;
+		padding: 40% 0;
+    }
+    
+    #hero img {
+        max-width: 65%;
+    }
+}
+
+/*tablets*/
+@media only screen and (max-width: 768px) {
+    :root {
+		font-size: 14px;
+    }
+    
+    #hero h1 {
+		font-size: 5em;
+	}
+
+	main {
+		background-size: cover;
+		padding: 40% 0;
+    }
 }
