--- a/styles/index.css
+++ b/styles/index.css
@@ -100,10 +100,13 @@ nav ul {
 	list-style-type: none;
 }
 
-nav ul a {
+nav ul a, nav {
 	color: var(--computing);
-	font-weight: 700;
+    font-weight: 700;
+    text-align: center;
 }
+
+
 
 a {
 	text-decoration: none;
@@ -125,7 +128,7 @@ main {
 	background-image: url("../assets/section_background.svg");
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: 135%;
+	background-size: cover;
 	padding: 10% 0;
 	display: flex;
 	justify-content: center;
@@ -149,7 +152,6 @@ main p, main ul{
 	}
 
 	main {
-		background-size: cover;
 		padding: 40% 0;
     }
 }
@@ -165,7 +167,6 @@ main p, main ul{
 	}
 
 	main {
-		background-size: cover;
 		padding: 40% 0;
     }
     
@@ -173,6 +174,6 @@ main p, main ul{
         max-width: 65%;
     }
     nav{
-        font-size: 1em;
+        font-size: 0.8em;
     }
 }
