--- a/styles/index.css
+++ b/styles/index.css
@@ -137,8 +137,19 @@ main p, main ul{
     font-family: 'Oxygen', sans-serif;
 }
 
+@media only screen and (max-width: 1088px) {
+    :root {
+		font-size: 16px;
+    }
+    
+	 #hero h1 {
+		font-size: 6em;
+	}
+
+}
+
 /*tablets*/
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 824px) {
     :root {
 		font-size: 14px;
     }
@@ -152,10 +163,11 @@ main p, main ul{
     }
 }
 
+
 /* phones */
 @media only screen and (max-width: 425px) {
 	:root {
-		font-size: 12px;
+		font-size: 13px;
 	}
 
 	#hero h1 {
